ifrn/Web Nuvens/Kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-develop
  namespace: develop
  labels:
    app: front-end-develop
spec:
  selector:
    matchLabels:
      app: front-end-develop
  replicas: 2
  template:
    metadata:
      labels:
        app: front-end-develop
    spec:
      containers:
       - name: nginx
         image: denirow/prog-redes
         ports:
         - containerPort: 80
