ifrn/Web Nuvens/Kubernetes/nginx-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-clusterip-homolog
  namespace: homolog
spec:
  type: ClusterIP
  selector:
    app: front-end-homolog
  ports:
  - port: 80
    targetPort: 80
