ifrn/Web Nuvens/Kubernetes/nginx-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-np
spec:
  type: NodePort
  selector:
    app: front-end
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
