ifrn/Web Nuvens/Kubernetes/nginx-ingress-ambientes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-primario-homolog
  namespace: homolog
spec:
  ingressClassName: nginx
  rules:
  - host: homolog.10.51.6.143.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: back-end-clusterip-homolog
            port:
              number: 80
